--- a/CRUDZASO-HabitFlow/style/stylesh.css
+++ b/CRUDZASO-HabitFlow/style/stylesh.css
@@ -9,18 +9,14 @@ body {
     color: #333;
 }
 
-body.dark {
-    background: #1a1a1a;
-    color: #fff;
-}
-
 header {
-    background: white;
+    background: rgb(244, 244, 244);
     padding: 20px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     display: flex;
-    justify-content: space-between;
+    justify-content: space-between; 
     align-items: center;
+    
 }
 
 body.dark header {
